<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/booklogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:id="@+id/name_frame"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_register_editviewshape"
            android:drawableLeft="@drawable/user"
            android:gravity="center"
            android:hint="First Name"
            android:inputType="textPersonName|text">

        </EditText>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_register_editviewshape"
            android:drawableLeft="@drawable/user"
            android:gravity="center"
            android:hint="Last Name"
            android:inputType="textPersonName">

        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/phone_num"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/name_frame"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_register_editviewshape"
        android:drawableLeft="@drawable/phone"
        android:gravity="center"
        android:hint="Phone Number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/phone_num"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_register_editviewshape"
        android:drawableLeft="@drawable/email"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/Email"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_register_editviewshape"
        android:drawableLeft="@drawable/user"
        android:gravity="center"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_password"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/login_register_editviewshape"
        android:layout_below="@id/text_username"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:hint="Password" />

    <EditText
        android:gravity="center"
        android:id="@+id/text_password_check"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@id/text_password"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:background="@drawable/login_register_editviewshape"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/lock"
        android:hint="Confirm Password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/positive_button"
        android:layout_below="@id/text_password_check"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:text="DONE REGISTER" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textStyle="bold"
        android:layout_below="@id/btn_register"
        android:layout_centerInParent="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Registered? "
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/login_in_register"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="Login"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerInParent="true"
        android:layout_marginTop="79dp"
        android:gravity="right"
        android:text="Need Help"
        android:textColor="#FFFFFF" />

    <Switch
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_username"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/text_password" />

</RelativeLayout>