<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >

    <TextView
        android:id="@+id/title_add_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="Add/Edit Book"
        android:textColor="#FFFFFFFF"
        android:textSize="30sp">
    </TextView>

    <ImageButton
        android:id="@+id/add_edit_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/title_add_edit"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_image1">
    </ImageButton>

    <EditText
        android:id="@+id/book_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_edit_image"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/componentBackground"
        android:hint="Book Name"
        android:inputType="text"
        android:paddingHorizontal="10dp">

    </EditText>

    <EditText
        android:id="@+id/author_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_name_editText"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/componentBackground"
        android:hint="Author Name"
        android:inputType="text"
        android:paddingHorizontal="10dp">

    </EditText>

    <EditText
        android:id="@+id/ISBN_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_editText"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/componentBackground"
        android:hint="ISBN"
        android:inputType="number"
        android:paddingHorizontal="10dp">

    </EditText>

    <Button
        android:id="@+id/ssISBN"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@color/componentBackground"
        android:layout_alignRight="@id/ISBN_editText"
        android:layout_alignBottom="@id/ISBN_editText"
        android:drawableBottom="@drawable/ic_menu_camera"
        >
    </Button>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/ISBN_editText"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/componentBackground"
        android:hint="Description"
        android:textColor="@android:color/secondary_text_light" >
    </EditText>

    <Button
        android:id="@+id/scan_description"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/componentBackground"
        android:layout_alignRight="@id/description"
        android:layout_alignBottom="@id/description"
        android:drawableBottom="@drawable/ic_menu_camera" >
    </Button>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        android:textSize="18sp"
        android:background="@color/componentBackground"
        android:textColor="@android:color/secondary_text_light" >
    </TextView>

    <Button
        android:id="@+id/book_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/positive_button"
        android:layout_centerInParent="true"
        android:layout_below="@id/status"
        android:text="OK"
        android:textColor="#FFFFFF" >
    </Button>

    <Button
        android:id="@+id/add_edit_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/negative_button"
        android:layout_centerInParent="true"
        android:layout_below="@id/book_confirm"
        android:text="Back"
        android:textColor="@color/colorAccent" >
    </Button>

</RelativeLayout>