...
            android:background="@color/menuBackground"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_baseline_filter_list_24" />

    </LinearLayout>
    <ListView
        android:id="@+id/my_book_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header" >
    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_book_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignBottom="@id/my_book_list"
        android:layout_alignEnd="@id/my_book_list"
...
